# refsearch

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: conf.py  index.md  installation.md  usage.md  winnoving.md
docs/source/: conf.py  index.md  installation.md
refsearch/: hashing.py
tests/: test_hashing.py
