[project]
name = "refsearch"
version = "0.0.0"
description = "Exploration of efficient/effective reference resolution."
authors = [{ name = "Roman Chyla", email = "roman.chyla@gmail.com"}]
license = { text = "MIT" }
readme = "README.md"
repository = "https://github.com/romanchyla/refsearch"
documentation = "https://refsearch.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    "refsearch",
]

dependencies = [
    'winnowing==0.2.1',
    'click>==8.0.3',
    # 'package @ git+ssh://git@github.com/someorgname/pkg-repo-name@[v1.1]#egg=some-pkg',
    # 'package @ git+https://github.com/someorgname/pkg-repo-name@[v1.1]#egg=some-pkg',
]


[project.urls]
Source = "https://github.com/romanchyla/refsearch"
Documentation = "https://refsearch.readthedocs.io"


[project.optional-dependencies]
dev = [
    'black==21.11b1',
    'flake8==4.0.1',
    'isort==5.10.1',
    'pytest==6.2.5',
    'pyupgrade==2.29.1',
    'pytest-mock==3.6.1',
    'pre-commit==2.16.0',
    'coveralls==3.3.1',
    'mock==4.0.3',
    'coverage==6.2',
    'pytest-cov==3.0.0',
    'pytest-cookies==0.6.1',
    'semantic-release==0.1.0',
]
docs = [
    'Sphinx==4.3.1',
    'myst-parser==0.15.2',
    'sphinx-rtd-theme==1.0.0'
]


[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
version_variable = "refsearch/version.py:__version__"
build_command = "flit build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=refsearch"
cache_dir = ".tmp/"

[tool.coverage.run]
data_file = ".tmp/.coverage"

[tool.coverage.report]
skip_empty = true
skip_covered = true

[tool.isort]
profile = "black"
known_first_party = ["refsearch", "tests"]

[tool.black]
line-length = 99 # override black's default line-length

[build-system]
requires = ["setuptools >= 58.6.0", "wheel", "flit_core >=3.2,<4", "ppsetuptools==2.0.2"]
build-backend = "flit_core.buildapi"
#build-backend = "setuptools.build_meta"

# see setup.py for explanation of these
[xsetup.entry_points]
console_scripts = [
    "refsearch=refsearch.cli:cli",
    "rtool=rtool:cli"
]
[xsetup]
scripts = [
]
